--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@makenew/tsmodule",
-  "version": "2.1.0",
+  "name": "@seamapi/makenew-tsmodule",
+  "version": "0.0.0",
   "description": "Package skeleton for a TypeScript module.",
   "type": "module",
   "main": "index.js",
@@ -13,9 +13,9 @@
   "keywords": [
     "node"
   ],
-  "homepage": "https://github.com/makenew/tsmodule",
-  "bugs": "https://github.com/makenew/tsmodule/issues",
-  "repository": "makenew/tsmodule",
+  "homepage": "https://github.com/seamapi/makenew-tsmodule",
+  "bugs": "https://github.com/seamapi/makenew-tsmodule/issues",
+  "repository": "seamapi/makenew-tsmodule",
   "license": "MIT",
   "author": {
     "name": "Evan Sosenko",
