--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "homepage": "https://github.com/seamapi/makenew-tsmodule",
   "bugs": "https://github.com/seamapi/makenew-tsmodule/issues",
   "repository": "seamapi/makenew-tsmodule",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "author": {
-    "name": "Evan Sosenko",
-    "email": "razorx@evansosenko.com"
+    "name": "Seam Labs, Inc.",
+    "email": "devops@getseam.com"
   },
   "files": [
     "index.js",
