Publish as restricted

--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Publish
         uses: rxfork/npm-publish@v1
         with:
-          access: public
+          access: restricted
           target: ${{ steps.meta.outputs.tgz }}
           token: ${{ secrets.registry_token }}
           registry: ${{ inputs.registry_host }}
