Use Angular Commit Message Conventions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
           mkdir tmp
           outfile=tmp/changelog.txt
           echo "outfile=${outfile}" >> $GITHUB_OUTPUT
-          npx --package standard-changelog@^2.0.0 --package conventional-changelog-conventionalcommits@^5.0.0 standard-changelog --preset conventionalcommits --release-count 2 --infile $outfile.tmp --outfile $outfile.tmp
+          npx standard-changelog@^2.0.0 --release-count 2 --infile $outfile.tmp --outfile $outfile.tmp
           sed '1,3d' $outfile.tmp > $outfile
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
