--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,8 +7,5 @@
     { "name": "beta", "prerelease": true },
     { "name": "alpha", "prerelease": true }
   ],
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    { "preset": "conventionalcommits" }
-  ]
+  "plugins": ["@semantic-release/commit-analyzer"]
 }
