--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prebuild:ts": "del 'index.*' lib",
     "postbuild:ts": "tsc-alias --project tsconfig.build.json",
     "typecheck": "tsc",
+    "dependencies": "dpdm --exit-code circular:1 src/index.ts",
     "test": "c8 ava",
     "pretest": "tsx src/index.ts",
     "test:update": "ava --update-snapshots",
@@ -60,6 +61,7 @@
     "ava": "^5.0.1",
     "c8": "^7.11.0",
     "del-cli": "^5.0.0",
+    "dpdm": "^3.13.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
