Revert "Publish as restricted"
This reverts commit c54e804cac7c14e33008acfd134014c2061ecead.

--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Publish
         uses: rxfork/npm-publish@v1
         with:
-          access: restricted
+          access: public
           target: ${{ steps.meta.outputs.tgz }}
           token: ${{ secrets.registry_token }}
           registry: ${{ inputs.registry_host }}
