--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -32,9 +32,7 @@ jobs:
         with:
           install_dependencies: 'false'
       - name: Normalize package-lock.json
-        run: npm install --ignore-scripts
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npm install
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
