--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,7 +35,6 @@ jobs:
         uses: ./.github/actions/setup
         with:
           node_version: ${{ matrix.node }}
-          node_auth_token: ${{ secrets.GH_TOKEN }}
       - name: Test
         run: npm test
   lint:
@@ -55,7 +54,6 @@ jobs:
         uses: ./.github/actions/setup
         with:
           node_version: ${{ matrix.node }}
-          node_auth_token: ${{ secrets.GH_TOKEN }}
       - name: Lint
         run: npm run lint
   build:
@@ -113,18 +111,7 @@ jobs:
           contents: |
             import '@seamapi/makenew-tsmodule'
       - name: Install
-        run: npm install --ignore-scripts --save ${{ steps.packages.outputs.paths }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
-      - name: Rebuild Node.js modules
-        shell: bash
-        run: npm rebuild
-      - name: Run postinstall script
-        shell: bash
-        run: npm run postinstall --if-present
-      - name: Run prepare script
-        shell: bash
-        run: npm run prepare --if-present
+        run: npm install --save ${{ steps.packages.outputs.paths }}
       - name: Run
         run: node index.js
   typecheck:
@@ -144,7 +131,6 @@ jobs:
         uses: ./.github/actions/setup
         with:
           node_version: ${{ matrix.node }}
-          node_auth_token: ${{ secrets.GH_TOKEN }}
       - name: Check types
         run: npm run typecheck
   dependencies:
@@ -156,7 +142,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup
         uses: ./.github/actions/setup
-        with:
-          node_auth_token: ${{ secrets.GH_TOKEN }}
       - name: Analyze dependencies
         run: npm run dependencies
