--- a/.github/workflows/makenew.yml
+++ b/.github/workflows/makenew.yml
@@ -27,10 +27,14 @@ jobs:
     timeout-minutes: 30
     steps:
       - name: Create repository
-        run: gh repo create --internal $REPO
+        run: |
+          gh repo create --internal --disable-wiki --description "$DESCRIPTION" $REPO
+          gh repo edit $REPO --delete-branch-on-merge
+          gh repo edit $REPO --enable-projects=false
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           REPO: seamapi/${{ github.event.inputs.repo }}
+          DESCRIPTION: ${{ github.event.inputs.description }}
   bootstrap:
     name: Bootstrap code
     runs-on: ubuntu-latest
@@ -40,7 +44,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: main
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
       - name: Import GPG key
@@ -61,19 +64,21 @@ jobs:
           mk_slug: ${{ github.event.inputs.slug }}
           mk_title: ${{ github.event.inputs.title }}
           mk_description: ${{ github.event.inputs.description }}
+      - name: Set origin
+        run: |
+          git remote add origin $ORIGIN
+          git config --add --bool push.autoSetupRemote true
+        env:
+          ORIGIN: https://github.com/seamapi/${{ github.event.inputs.repo }}.git
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          skip_fetch: true
+          skip_checkout: true
           commit_message: Replace makenew boilerplate
           commit_user_name: ${{ secrets.GIT_USER_NAME }}
           commit_user_email: ${{ secrets.GIT_USER_EMAIL }}
           commit_author: ${{ secrets.GIT_USER_NAME }} <${{ secrets.GIT_USER_EMAIL }}>
-      - name: Push
-        run: |
-          git remote add origin $ORIGIN
-          git push -u origin main
-        env:
-          ORIGIN: git@github.com:seamapi/${{ github.event.inputs.repo }}.git
   version:
     name: Cut initial version
     runs-on: ubuntu-latest
