Pass node_auth_token to workflows

--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -9,6 +9,10 @@ on:
         type: string
         required: false
         default: '18'
+    secrets:
+      node_auth_token:
+        description: The Node.js auth token.
+        required: true
     outputs:
       artifact_name:
         description: The artifact name.
@@ -26,7 +30,7 @@ jobs:
         uses: ./.github/actions/setup
         with:
           node_version: ${{ inputs.node_version }}
-          node_auth_token: ${{ secrets.GH_TOKEN }}
+          node_auth_token: ${{ secrets.node_auth_token }}
       - name: Build
         run: npm run build
       - name: Package
