--- a/.github/workflows/makenew.yml
+++ b/.github/workflows/makenew.yml
@@ -82,6 +82,8 @@ jobs:
     timeout-minutes: 30
     needs: bootstrap
     steps:
+      - name: Wait for repo to exist
+        run: sleep 10
       - name: Cut version
         run: gh workflow run version.yml --repo $REPO --raw-field version=patch
         env:
