--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Package skeleton for a TypeScript module.",
   "type": "module",
   "main": "index.js",
-  "typings": "index.d.ts",
+  "types": "index.d.ts",
   "exports": {
-    "import": "./index.js"
+    "import": "./index.js",
+    "types": "index.d.ts"
   },
   "module": "index.js",
   "sideEffects": false,
