--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
     needs: build
     with:
       artifact_name: ${{ needs.build.outputs.artifact_name }}
-      registry_host: https://npm.pkg.github.com
+      registry_url: https://npm.pkg.github.com
     secrets:
       registry_token: ${{ secrets.GITHUB_TOKEN }}
       node_auth_token: ${{ secrets.GH_TOKEN }}
