Use conventional commit message in ci

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -37,7 +37,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         if: always()
         with:
-          commit_message: Run format
+          commit_message: 'ci: Format code'
           commit_user_name: ${{ secrets.GIT_USER_NAME }}
           commit_user_email: ${{ secrets.GIT_USER_EMAIL }}
           commit_author: ${{ secrets.GIT_USER_NAME }} <${{ secrets.GIT_USER_EMAIL }}>
