Fix types in export map

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "index.js",
   "types": "index.d.ts",
   "exports": {
-    "import": "./index.js",
-    "types": "index.d.ts"
+    ".": {
+      "import": "./index.js",
+      "types": "./index.d.ts"
+    }
   },
   "module": "index.js",
   "sideEffects": false,
