--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
     needs: build
     with:
       artifact_name: ${{ needs.build.outputs.artifact_name }}
-      registry_host: https://registry.npmjs.org
+      registry_url: https://registry.npmjs.org
     secrets:
       registry_token: ${{ secrets.NPM_TOKEN }}
   github:
