--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -14,7 +14,7 @@ on:
         required: true
     secrets:
       registry_token:
-        description: The Node.js registry token.
+        description: The package registry token.
         required: true
 
 jobs:
