--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     }
   },
   "files": ["src/index.ts"],
-  "include": ["src/**/*", "test/**/*", "examples/**/*", "tsup.config.ts"]
+  "include": ["src/**/*", "test/**/*", "tsup.config.ts"]
 }
