--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "index.js",
     "index.js.map",
     "index.d.ts",
-    "lib",
     "src",
     "dist",
     "!**/*.test.ts"
@@ -46,7 +45,7 @@
     "build:entrypoints": "npm run build:ts",
     "postbuild:entrypoints": "tsup",
     "build:ts": "tsc --project tsconfig.build.json",
-    "prebuild:ts": "del 'index.*' lib",
+    "prebuild:ts": "del 'index.*'",
     "postbuild:ts": "tsc-alias --project tsconfig.build.json",
     "typecheck": "tsc",
     "test": "c8 ava",
