--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "index.js.map",
     "index.d.ts",
     "src",
-    "dist",
-    "!**/*.test.ts"
+    "dist"
   ],
   "scripts": {
     "build": "npm run build:entrypoints",
@@ -48,17 +47,13 @@
     "prebuild:ts": "del 'index.*'",
     "postbuild:ts": "tsc-alias --project tsconfig.build.json",
     "typecheck": "tsc",
-    "test": "c8 ava",
+    "test": "true",
     "pretest": "tsx src/index.ts",
-    "test:update": "ava --update-snapshots",
-    "test:watch": "ava --watch",
-    "test:debug": "ava debug --break",
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
     "format": "eslint --ignore-path .gitignore --fix .",
-    "preformat": "prettier --write --ignore-path .gitignore .",
-    "report": "c8 report"
+    "preformat": "prettier --write --ignore-path .gitignore ."
   },
   "engines": {
     "node": ">=18.12.0",
@@ -66,8 +61,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
-    "ava": "^6.0.1",
-    "c8": "^9.0.0",
     "del-cli": "^5.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.0.0",
