--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,5 +9,5 @@
   },
   "files": ["src/index.ts"],
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts", "tsup.config.ts"]
+  "exclude": ["tsup.config.ts"]
 }
