--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@seamapi/http": "^0.14.0",
     "@seamapi/types": "^1.81.0",
     "@seamapi/webhook": "^0.1.0",
-    "seam-cli": "^0.0.28"
+    "seam-cli": "^0.0.28",
+    "seamapi-types": "^1.32.0"
   }
 }
