--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "http://json.schemastore.org/renovate",
+  "extends": ["config:recommended"],
   "semanticCommits": true,
   "semanticCommitType": "ci",
   "commitMessageLowerCase": "never",
@@ -8,7 +10,13 @@
     {
       "matchPackageNames": ["seamapi-types"],
       "matchPackagePatterns": ["^@seamapi/"],
-      "groupName": "seam"
+      "groupName": "seam",
+      "minor": {
+        "semanticCommitType": "feat"
+      },
+      "patch": {
+        "semanticCommitType": "fix"
+      }
     }
   ]
 }
