--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/renovate",
   "extends": ["config:recommended"],
-  "semanticCommits": true,
+  "semanticCommits": "enabled",
   "semanticCommitType": "ci",
   "commitMessageLowerCase": "never",
   "autoApprove": true,
