--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,9 @@ updates:
     directory: '/'
     schedule:
       interval: weekly
+    commit-message:
+      prefix: feat
+      include: scope
     allow:
       - dependency-type: production
     groups:
