Fix missing declaration files

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": false,
+    "declaration": true,
     "noEmit": false,
     "noEmitOnError": true,
     "rootDir": "./src",
