--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
     "format": "eslint --ignore-path .gitignore --fix .",
-    "preformat": "prettier --write --ignore-path .gitignore ."
+    "preformat": "prettier --write --ignore-path .gitignore .",
+    "generate:readme": "tsx ./src/scripts/generate-readme.ts"
   },
   "engines": {
     "node": ">=18.12.0",
