--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -35,15 +35,16 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: semantic
-    if: ${{ needs.semantic.outputs.new_release_published == 'true' }}
+    if: needs.semantic.outputs.new_release_published == 'true' && needs.semantic.outputs.new_release_version != '1.0.0'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: Release version ${{ steps.release.outputs.new_release_version }} on ${{ github.ref_name }}
+      - name: Release version ${{ needs.semantic.outputs.new_release_version }} on ${{ github.ref_name }}
         run: gh workflow run version.yml --raw-field version=$VERSION --ref $BRANCH
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           VERSION: ${{ needs.semantic.outputs.new_release_version }}
           BRANCH: ${{ github.ref_name }}
+          
