--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "@seamapi/http": "0.25.0",
     "@seamapi/types": "1.144.0",
-    "@seamapi/webhook": "0.1.1",
+    "@seamapi/webhook": "1.0.0-rc.0",
     "seamapi-types": "1.42.0"
   },
   "devDependencies": {
