--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
-    "generate:readme": "tsx ./scripts/generate-readme.ts",
+    "generate:readme": "tsx ./generate-readme.ts",
     "format": "eslint --ignore-path .gitignore --fix .",
     "preformat": "prettier --write --ignore-path .gitignore ."
   },
