--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     }
   },
   "files": ["src/index.ts"],
-  "include": ["src/**/*", "tsup.config.ts", "scripts"]
+  "include": ["src/**/*", "tsup.config.ts", "scripts", "generate-readme.ts"]
 }
