--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
+    "example": "tsx examples",
+    "example:inspect": "tsx --inspect examples",
     "format": "eslint --ignore-path .gitignore --fix .",
     "preformat": "prettier --write --ignore-path .gitignore ."
   },
@@ -74,6 +76,7 @@
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "landlubber": "^2.0.0",
     "prettier": "^3.0.0",
     "tsc-alias": "^1.8.2",
     "tsup": "^8.0.1",
