--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,5 +11,5 @@
   },
   "files": ["src/index.ts"],
   "include": ["src/**/*"],
-  "exclude": ["tsup.config.ts"]
+  "exclude": ["tsup.config.ts", "generate-readme.ts"]
 }
