feat: Generate README.md usage from dependencies (#52)
* feat: generate README.md from dependencies

* ci: Generate code

* ci: Generate code

* ci: Generate code

* ci: Generate code

* ci: Generate code

* ci: Generate code

* revert README.md

* update to replace once

* ci: Generate code

* ci: Generate code

* ci: Generate code

* revert README.md

* check generate loop

* fix whitespace

* ci: Generate code

* move src/scripts -> scripts

* move generate:readme -> above format

* move generate-readme out of scripts

* revert README.md

* refactor to promises & specifying submodules

* grab missing sections

* replace types

* skip type replacement

* add back type replace

* revert README.md

* ci: Generate code

* ci: Format code

* ci: Generate code

* ci: Format code

* revert README.md

* run generate

* revert README.md

* ignore whietspace

* ci: Generate code

* ci: Format code

* remove current usage

* Update generate-readme.ts

Co-authored-by: Evan Sosenko <evan@getseam.com>

* Update tsconfig.json

Co-authored-by: Evan Sosenko <evan@getseam.com>

* ignore genrate-readme in build

* Update generate-readme.ts

Co-authored-by: Evan Sosenko <evan@getseam.com>

* use trim instead of regex

* use trim instead of regex

* revert readme

* update ### Usage -> ## Usage

* update ### Usage -> ## Usage

* ci: Format code

* ci: Generate code

* ci: Format code

* ci: Generate code

* ci: Format code

---------

Co-authored-by: Seam Bot <devops@getseam.com>
Co-authored-by: Evan Sosenko <evan@getseam.com>

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
+    "generate:readme": "tsx ./generate-readme.ts",
     "example": "tsx examples",
     "example:inspect": "tsx --inspect examples",
     "format": "eslint --ignore-path .gitignore --fix .",
