--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
-    "generate:readme": "tsx ./generate-readme.ts",
+    "generate": "tsx generate-readme.ts",
+    "postgenerate": "markdown-toc -i README.md --bullets '-'",
     "example": "tsx examples",
     "example:inspect": "tsx --inspect examples",
     "format": "eslint --ignore-path .gitignore --fix .",
@@ -78,6 +79,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "landlubber": "^2.0.0",
+    "markdown-toc": "^1.2.0",
     "prettier": "^3.0.0",
     "tsc-alias": "^1.8.2",
     "tsup": "^8.0.1",
