--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   merge:
-    name: Merge #${{ number }}
+    name: Merge
     runs-on: ubuntu-latest
     timeout-minutes: 30
     if: github.actor == 'dependabot[bot]'
