--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "@seamapi/http": "0.25.3",
     "@seamapi/types": "1.153.2",
     "@seamapi/webhook": "1.0.0-rc.0",
-    "seamapi-types": "1.42.0"
+    "seamapi-types": "1.42.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
