--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "npm": ">= 9.0.0"
   },
   "dependencies": {
-    "@seamapi/http": "0.28.0",
-    "@seamapi/types": "1.164.0",
-    "@seamapi/webhook": "1.0.0-rc.0",
+    "@seamapi/http": "1.0.0-rc.0",
+    "@seamapi/types": "1.166.0",
+    "@seamapi/webhook": "1.0.0-rc.1",
     "seamapi-types": "1.42.0",
     "zod": "^3.21.4"
   },
