Format README after generate

--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "lint": "eslint --ignore-path .gitignore .",
     "prelint": "prettier --check --ignore-path .gitignore .",
     "postversion": "git push --follow-tags",
-    "generate": "tsx generate-readme.ts",
-    "postgenerate": "markdown-toc -i README.md --bullets '-'",
+    "generate": "markdown-toc -i README.md --bullets '-'",
+    "pregenerate": "tsx generate-readme.ts",
+    "postgenerate": "prettier --write README.md",
     "example": "tsx examples",
     "example:inspect": "tsx --inspect examples",
     "format": "eslint --ignore-path .gitignore --fix .",
