--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
       - dependency-name: '*'
         update-types:
           - 'version-update:semver-major'
+      - dependency-name: 'zod'
     groups:
       seam:
         dependency-type: production
