--- a/package.json
+++ b/package.json
@@ -83,6 +83,6 @@
     "tsc-alias": "^1.8.2",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.0"
+    "typescript": "~5.3.3"
   }
 }
