--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "npm": ">= 10.9.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.11.29",
     "@types/node": "^22.15.21",
     "ava": "^6.0.1",
     "c8": "^10.1.2",
