--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "postversion": "git push --follow-tags",
     "example": "tsx examples",
     "example:inspect": "tsx --inspect examples",
-    "format": "eslint --ignore-path .gitignore --fix .",
-    "preformat": "prettier --write --ignore-path .gitignore .",
+    "format": "prettier --write --ignore-path .gitignore .",
+    "postformat": "eslint --ignore-path .gitignore --fix .",
     "report": "c8 report"
   },
   "engines": {
