Update to ESLint v10

--- a/package.json
+++ b/package.json
@@ -73,12 +73,12 @@
     "ava": "^6.0.1",
     "c8": "^10.1.2",
     "del-cli": "^6.0.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint": "^9.31.0",
+    "eslint-config-love": "^121.0.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "jiti": "^2.4.2",
     "landlubber": "^2.0.0",
     "prettier": "^3.0.0",
     "tsc-alias": "^1.8.2",
