--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,11 @@
     }
   },
   "files": ["src/index.ts"],
-  "include": ["src/**/*", "test/**/*", "examples/**/*", "tsup.config.ts"]
+  "include": [
+    "src/**/*",
+    "test/**/*",
+    "examples/**/*",
+    "eslint.config.ts",
+    "tsup.config.ts"
+  ]
 }
