--- a/package.json
+++ b/package.json
@@ -84,6 +84,6 @@
     "tsc-alias": "^1.8.2",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.8.3"
   }
 }
