--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "c8": "^10.1.2",
     "del-cli": "^6.0.0",
     "eslint": "^9.31.0",
-    "eslint-config-love": "^121.0.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "jiti": "^2.4.2",
     "landlubber": "^2.0.0",
+    "neostandard": "^0.12.2",
     "prettier": "^3.0.0",
     "tsc-alias": "^1.8.2",
     "tsup": "^8.0.1",
