--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "strict": true,
     "module": "nodenext",
     "esModuleInterop": true,
-    "target": "es2021",
+    "moduleDetection": "force",
+    "target": "es2023",
     "jsx": "react-jsx",
     "sourceMap": true,
     "newLine": "lf",
